Minor style sheet tweak to correct disclaimer centering on Safari and Firefox (Chrome behaves differently)

--- a/functiongrapher/style.css
+++ b/functiongrapher/style.css
@@ -1,6 +1,6 @@
 /* Overlay disclaimer on everything, light grey, huge, small caps */
 
-#disclaimer {position: absolute; top: 294px; color: #ccc; text-align: center; width: 716px; font-size: 72pt; font-variant: small-caps; margin-left: auto; margin-right: auto; left: 0; right: 0}
+#disclaimer {position: absolute; top: 294px; color: #ccc; text-align: center; width: 732px; font-size: 72pt; font-variant: small-caps; margin-left: auto; margin-right: auto; left: 0; right: 0}
 
 /* Macro layout */
 
